<resources>
    <string name="app_name">掌上餐厅</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zhucexieyi">注册账号</string>


    <!-- auth.register -->
    <string name="register_edittext_phone">手机号码</string>
    <string name="register_edittext_code">验证码</string>
    <string name="register_button_code">获取验证码</string>
    <string name="register_edittext_name">姓名</string>
    <string name="register_radiobutton_sex">性别</string>
    <string name="register_radiobutton_man">男</string>
    <string name="register_radiobutton_woman">女</string>
    <string name="register_edittext_password">密码(6到16位)</string>
    <string name="register_edittext_confirm_password">确认密码</string>
    <string name="register_button_register">注册</string>
    <string name="register_textview_warning">注册视为同意掌上餐厅的</string>
    <string name="register_textview_protocol">  <a href="">用户协议</a></string>
    <string name="register_protocol">用户协议</string>

    <string name="login_edittext_phone">手机号</string>
    <string name="login_edittext_password">密码</string>
    <string name="login_button_login">登录</string>
    <string name="login_textview_forgetpassword">忘记密码？</string>
    <string name="login_textview_register">注册账号</string>

    <string name="person_password_text_title">修改密码</string>
    <string name="person_password_text_enter">请输入新密码</string>
    <string name="person_password_text_enteragain">请确认密码</string>
    <string name="person_password_btn_save">保存</string>

    <!-- person information -->
    <string name="person_information_text_title">编辑资料</string>
    <string name="person_information_text_photo">头像</string>
    <string name="person_information_text_telephone">手机号码</string>
    <string name="person_information_text_name">姓名</string>
    <string name="person_information_text_sex">性别</string>
    <string name="person_information_text_password">修改密码</string>
    <string name="person_main_image_information">个人资料</string>

</resources>
