<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/headbg"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/back_selector"
            android:background="@drawable/null_btn_text" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/register_button_register"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_selector"
            android:hint="@string/register_edittext_phone"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_code"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="@drawable/edittext_selector"
                android:hint="@string/register_edittext_code"
                android:inputType="number" />

            <Button
                android:id="@+id/register_getcode"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/blue_btn_text"
                android:text="@string/register_button_code"
                android:textColor="@color/text_white" />
        </LinearLayout>

        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_selector"
            android:hint="@string/register_edittext_name"
            android:maxLength="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_radiobutton_sex"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/register_sex"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/register_radiobutton_sex"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/register_radiobutton_man" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/register_radiobutton_woman" />
            </RadioGroup>
        </LinearLayout>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_selector"
            android:hint="@string/register_edittext_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/register_password_again"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_selector"
            android:hint="@string/register_edittext_confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registerbtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_btn_text"
            android:text="@string/register_button_register"
            android:textColor="@color/text_white" />

        <LinearLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/register_textview_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/register_textview_warning" />

            <TextView
                android:id="@+id/register_textview_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoLink="web"
                android:text="@string/register_textview_protocol" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>