<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/headbg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/back_selector"
            android:background="@drawable/null_btn_text"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/login_textview_forgetpassword"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/register_edittext_phone"
            android:background="@drawable/edittext_selector"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/code"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="@drawable/edittext_selector"
                android:hint="@string/register_edittext_code"
                android:inputType="number" />

            <Button
                android:id="@+id/getcode"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/blue_btn_text"
                android:text="@string/register_button_code"
                android:textColor="@color/text_white" />
        </LinearLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:hint="@string/person_password_text_enter"
            android:layout_margin="20dp"
            android:background="@color/border_gray"/>

        <EditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:hint="@string/person_password_text_enteragain"
            android:layout_margin="20dp"
            android:background="@color/border_gray"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >
            <Button
                android:id="@+id/save"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:background="@drawable/blue_btn_text"
                android:layout_alignParentRight="true"
                android:textColor="@color/text_white"
                android:text="@string/person_password_btn_save" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>