<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headbg" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/back_selector"
            android:padding="10dp"
            android:background="@drawable/null_btn_text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/person_password_text_title"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginRight="50dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:hint="@string/person_password_text_enter"
            android:layout_margin="20dp"
            android:drawableLeft="@drawable/password"
            android:background="@color/border_gray"/>

        <EditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:hint="@string/person_password_text_enteragain"
            android:layout_margin="20dp"
            android:drawableLeft="@drawable/password"
            android:background="@color/border_gray"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >
            <Button
                android:id="@+id/save"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:background="@drawable/blue_btn_text"
                android:layout_alignParentRight="true"
                android:textColor="@color/text_white"
                android:text="@string/person_password_btn_save" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>